Customizing index.html for own bitstarter project (WIP)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Kanji Study</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -125,13 +125,13 @@
       <!-- Font and pired font of .heading/ .subheading and body from Google Fonts -->
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>Kanji Study</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
 	  <!-- Special typography from Bootstrap for lead paragraph. -->
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">Study Japanese Kanji through immersion in web articles with JLPT level vocabulary highlights.</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
@@ -146,17 +146,17 @@
 	      <div class="span4">
 		<!-- linediv-l and linediv-r give dividing lines that look different in horizontal and vertical layouts, illustrating media queries. -->
 		<div class="linediv-l">
-		  <h3>1000</h3><p>backers</p>
+		  <h3>0</h3><p>backers</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <h3>$0</h3> <p>of $5,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>60</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
@@ -173,7 +173,7 @@
 	    <button class="btn btn-success btn-large">Preorder</button>
 	  </div>
 	  <div class="span8 offset2 social">
-	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twiter</button>
+	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	  </div>
 	</div>
@@ -185,16 +185,16 @@
 	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
 	<div class="span5 copy">
-	  <p>
-	    Marketing copy section 1... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer commodo pharetra eleifend. Proin arcu erat, vulputate hendrerit ante eget, luctus scelerisque elit. Donec a felis enim. Donec commodo varius metus sed cursus. In laoreet velit lobortis, ultrices sapien id, posuere est. Nulla dui nunc, viverra vitae massa non, ullamcorper vulputate nulla. Etiam rhoncus quis odio a suscipit. Phasellus non lorem tellus. Morbi eget tortor ultrices erat dignissim vehicula. Duis suscipit hendrerit mi, a fermentum arcu suscipit a. Donec viverra, orci non consectetur volutpat, urna nibh condimentum ante, ut lacinia nisl est quis lorem. In et ornare massa. 
+	  <p><strong>Kanji Study</strong> aims to bring Japanese web articles to you to help your immersion study and aid recognition of Japanese Kanji based on your JLPT (Japanese Language Proficiency Test) level. It hopes to make learning Kanji more enjoyable and relevant through reading articles of interest to help with japanese comprehension.</p>
+	  <p>Intermediate learners of Japanese have developed proficiency in reading hiragana and katakana, and further proficiency depends on recognition of kanji. With 1,945 officially endorsed kanji and approximately 2,500 commonly used in books and newspapers, and the various readings of kanji used in different situations, learning kanji is not easy but is essential.
 	  </p>
 	</div>
       </div>
 
       <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
-	  <p>
-	    Section 2..Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer commodo pharetra eleifend. Proin arcu erat, vulputate hendrerit ante eget, luctus scelerisque elit. Donec a felis enim. Donec commodo varius metus sed cursus. In laoreet velit lobortis, ultrices sapien id, posuere est. Nulla dui nunc, viverra vitae massa non, ullamcorper vulputate nulla. Etiam rhoncus quis odio a suscipit. Phasellus non lorem tellus. Morbi eget tortor ultrices erat dignissim vehicula. Duis suscipit hendrerit mi, a fermentum arcu suscipit a. Donec viverra, orci non consectetur volutpat, urna nibh condimentum ante, ut lacinia nisl est quis lorem. In et ornare massa. 
+	  <h2>How does Kanji Study help?</h2>
+	  <p>Kanji Study grabs articles from your favourite news/RSS feeds and displays them with furigana to enable easy phonetic reading of kanji and translations kanji based on your chosen JLPT level. This allows Japanese learners to focus on a limited batch of kanji characters for drilling and contextual comprehension. The aim would be to enable readers to enjoy more of the article and maintain interest in trying to read even though a complete understanding of the entire article is not possible. This simulates the reading-learning process that we have experienced as children when we pick up an interesting book, and try to read even though there may be many words we do not understand.
 	  </p>
 	</div>
 	<div class="span5 asset">
@@ -209,11 +209,11 @@
 	  <div class="accordion" id="accordion2">
 	    <div class="accordion-group">
 	      <div class="accordion-heading">
-		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">What does FAQ stand for?</a>
+		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne"> does FAQ stand for?</a>
 	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Question.
+		  Frequently Asked Questions
 		</div>
 	      </div>
 	    </div>
