My project bitstarter - Assignment 4 Part2

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
          padding: 2.5% 10%;
         }
         .linediv-l {
-         border-bottom: 1px wite solid;
+         border-bottom: 1px white solid;
         }
         .linediv-r {
          border-top: 1px white solid;
@@ -43,7 +43,7 @@
 
       /* Main body and headings */
       body {
-        font-family: 'Open Sans', helvetica, Arial, sans-serif;
+        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
@@ -91,7 +91,7 @@
         text-align: center;
       }
       .footer p {
-        fotn-size: 11px;
+        font size: 11px;
       }
       .footer a {
         color: #ccccff;
@@ -136,7 +136,7 @@
       </div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://i.imgur.com/D5MnWYW.png">
 	</div>
 
 	<!-- Define new 'actions' div to contain statistics, order, and share buttons. -->
@@ -182,7 +182,7 @@
       <!-- Marketing copy begins -->
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://i.imgur.com/DWuODIP.png">
 	</div>
 	<div class="span5 copy">
 	  <p><strong>Kanji Study</strong> aims to bring Japanese web articles to you to help your immersion study and aid recognition of Japanese Kanji based on your JLPT (Japanese Language Proficiency Test) level. It hopes to make learning Kanji more enjoyable and relevant through reading articles of interest to help with japanese comprehension.</p>
@@ -198,7 +198,7 @@
 	  </p>
 	</div>
 	<div class="span5 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://i.imgur.com/UYSVry9.png">
 	</div>
       </div>
 								  
@@ -209,34 +209,43 @@
 	  <div class="accordion" id="accordion2">
 	    <div class="accordion-group">
 	      <div class="accordion-heading">
-		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne"> does FAQ stand for?</a>
+		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">How does it work?</a>
 	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Questions
+		  Kanji Study is a web app where users select or enter a RSS feed source and the articles will be parsed for selected kanji translations based on a pre-selected JLPT level. The phonetic pronounciations in hiragana and the English translation will be shown to readers. It will essentially function as a Japanese-English optimized RSS reader.
 		</div>
 	      </div>
 	    </div>
 	    <div class="accordion-group">
 	      <div class="accordion-heading">
-		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">What is a Frequently Asked Question?</a>
+		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">Any other features will be implemented?</a>
 	      </div>
 	      <div id="collapseTwo" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  A question which is commonly asked by users.
+		  With time it is hoped Kanji Study will developed into a full-featured web based study tool including flashcard and quizzing to speed up learning and retention of Kanji.
 		</div>
 	      </div>
 	    </div>
+	    <div class="accordion-group">
+	      <div class="accordion-heading">
+		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">What is the JLPT?</a>
+	      </div>
+	      <div id="collapseThree" class="accordion-body collapse">
+		<div class="accordion-inner">
+		  The JLPT stands for the Japanese-Language Proficiency Test. It has been offered by the Japan Foundation and Japan Educational Exchanges and Services since 1984 as areliable means of evlauating and certifying the Japanese proficiency of non-native speakers. Further information can be obtained at their <a href="http://www.jlpt.jp/e/about/index.html">official website</a>.
+		</div>
+	       </div>
+	    </div>
 	  </div>
 	</div>
-
       </div>
 
       <!-- Putting under a CC By-SA 3.0 license. -->
       <!-- http://creativecommons.org/licenses/ -->
       <div class="row-fluid footer">
 	<div class="span12">
-	  <p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>, without all the cruft that would otherwise be put at the bottom of the page.</p>
+	  <p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a></p>
 	</div>
       </div>
     </div>
