Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
       <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
-	  <h2>How does Kanji Study help?</h2>
+	  <h2>What is Kanji Study?</h2>
 	  <p>Kanji Study grabs articles from your favourite news/RSS feeds and displays them with furigana to enable easy phonetic reading of kanji and translations kanji based on your chosen JLPT level. This allows Japanese learners to focus on a limited batch of kanji characters for drilling and contextual comprehension. The aim would be to enable readers to enjoy more of the article and maintain interest in trying to read even though a complete understanding of the entire article is not possible. This simulates the reading-learning process that we have experienced as children when we pick up an interesting book, and try to read even though there may be many words we do not understand.
 	  </p>
 	</div>
