Fixed staging bugs in develop branch

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </head>
   <body>
 
-    <!-- Mobile-friendly navbar adapte from example. -->
+    <!-- Mobile-friendly navbar adapted from example. -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
 	<div class="container">
