--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 	  <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
+	    <span class="icon-bar"></span>
 	  </button>
 	  <a class="brand" href="#">Bitstarter</a>
 	  <div class="nav-collapse collapse">
@@ -136,13 +137,14 @@
       </div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://i.imgur.com/D5MnWYW.png">
+	  <img class="img-polaroid" alt="Flag-Image" src="http://i.imgur.com/D5MnWYW.png">
 	</div>
 
 	<!-- Define new 'actions' div to contain statistics, order, and share buttons. -->
 	<div class="span5 actions">
+	  <div class="row-fluid">
 	  <div class="span8 offset2">
-	    <div class="statistics">
+	    <div class="row-fluid statistics">
 	      <div class="span4">
 		<!-- linediv-l and linediv-r give dividing lines that look different in horizontal and vertical layouts, illustrating media queries. -->
 		<div class="linediv-l">
@@ -161,6 +163,7 @@
 	      </div>
 	    </div>
 	  </div>
+	  <div class="row fluid">
 	  <div class="span10 offset1">
 	    <!-- Bootstrap progress bar -->
 	    <div class="thermometer progress active">
@@ -168,21 +171,27 @@
 	      <div class="bar bar-warning" style="width: 40%;"></div>
 	    </div>
 	  </div>
+	  </div>
+	  <div class="row-fluid">
 	  <div class="span6 offset3 order">
 	    <!-- Standard Bootstrap button. -->
 	    <button class="btn btn-success btn-large">Preorder</button>
 	  </div>
+	  </div>
+	  <div class="row-fluid">
 	  <div class="span8 offset2 social">
 	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 	  </div>
+	  </div>
+	</div>
 	</div>
       </div>
 
       <!-- Marketing copy begins -->
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://i.imgur.com/DWuODIP.png">
+	  <img class="img-polaroid" alt="Kanji-Pic" src="http://i.imgur.com/DWuODIP.png">
 	</div>
 	<div class="span5 copy">
 	  <p><strong>Kanji Study</strong> aims to bring Japanese web articles to you to help your immersion study and aid recognition of Japanese Kanji based on your JLPT (Japanese Language Proficiency Test) level. It hopes to make learning Kanji more enjoyable and relevant through reading articles of interest to help with japanese comprehension.</p>
@@ -198,7 +207,7 @@
 	  </p>
 	</div>
 	<div class="span5 asset">
-	  <img class="img-polaroid" src="http://i.imgur.com/UYSVry9.png">
+	  <img class="img-polaroid" alt="Mockup" src="http://i.imgur.com/UYSVry9.png">
 	</div>
       </div>
 								  
