--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 	  </div>
 	  <div class="row-fluid">
 	  <div class="span6 offset3 order">
-	    <!-- Standard Bootstrap button. -->
-	    <button class="btn btn-success btn-large">Preorder</button>
+	    <!-- Coinbase button code -->
+	    <a class="coinbase-button" data-code="4a43481e8f1ccafc84a738f6795df9d0" href="https://coinbase.com/checkouts/4a43481e8f1ccafc84a738f6795df9d0">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	  </div>
 	  </div>
 	  <div class="row-fluid">
